# logicalcalculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.csv
src/: argumentData.hpp  conjunction.cpp  csvParsing.cpp  csvParsing.hpp  exclusiveDisjunction.cpp  inclusiveDisjunction.cpp  logicalOperations.hpp  main.cpp  masterCalculate.cpp  masterCalculate.hpp  materialEquivalence.cpp  materialImplication.cpp  operationBlock.hpp  premise.hpp  symbol.hpp  truthFunction.cpp  truthFunction.hpp  truthTable.cpp  truthTable.hpp  variable.cpp  variable.hpp
